--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -4,6 +4,8 @@ server {
 	proxy_set_header X-Real-IP	$remote_addr;
 	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
+	root /home/box/web;
+
 	location ^~ /hello/ {
 		proxy_pass http://127.0.0.1:8080;
 	}
