--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -10,6 +10,10 @@ server {
 		proxy_pass http://127.0.0.1:8080;
 	}
 
+	location / {
+		proxy_pass http://127.0.0.1:8000;
+	}
+
 	location ^~ /uploads/ {
 		alias /home/box/web/uploads/;
 	}
@@ -17,10 +21,5 @@ server {
 	location ~* \.(gif|png|css|js)$ {
 		root /home/box/web/public;
 	}
-
-
-	#location / {
-	#	proxy_pass http://127.0.0.1:8000;
-	#}
 	
 }
